--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+cassandraDriver = "4.17.0"
 javaCompatibility = "17"
 
 kotlin = "1.8.20"
@@ -7,6 +8,9 @@ kotlinxCoroutines = "1.7.0-Beta"
 kotlinxSerialization = "1.5.0"
 
 [libraries]
+cassandra-driver-core = { group = "com.datastax.oss", name = "java-driver-core", version.ref = "cassandraDriver" }
+cassandra-driver-query-builder = { group = "com.datastax.oss", name = "java-driver-query-builder", version.ref = "cassandraDriver" }
+
 kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
 
