--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,7 @@ jobs:
                     port: 9042
                     connect-timeout: 30
                     keyspace: test
+                    scripts_path: "./scripts"
 
             -   name: Run tests
                 run: |
