--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
                 image: cassandra
                 ports:
                     - 9042:9042
+                options: --health-cmd "cqlsh"
         steps:
             -   run: docker ps
             -   run: docker exec ${{ job.services.cassandra.id }} cqlsh --debug localhost:9042 --execute="use cassandra1;"
