--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,22 @@ jobs:
         steps:
             -   run: docker ps
             -   uses: actions/checkout@v3
+
+            -   name: Set up JDK 17
+                uses: actions/setup-java@v3
+                with:
+                    distribution: 'zulu'
+                    java-version: 17
+
+            -   name: Restore gradle
+                uses: gradle/gradle-build-action@v2
+                with:
+                    cache-read-only: ${{ github.ref != 'refs/heads/dev' && github.ref != 'refs/heads/main' && github.ref != 'refs/heads/master' }}
+                    gradle-home-cache-cleanup: true
+                env:
+                    GRADLE_BUILD_ACTION_CACHE_DEBUG_ENABLED: true
+
+
             -   name: Run tests
                 run: |
-                    ./gradlew test
+                    ./gradlew check
