upload to maven central

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,3 +24,5 @@ kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+
+gradle-nexus-publish = { id = "io.github.gradle-nexus.publish-plugin", version = "1.1.0" }
