--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,6 @@ jobs:
                 env:
                     GRADLE_BUILD_ACTION_CACHE_DEBUG_ENABLED: true
 
-            -   name: Run tests
+            -   name: Run ktlint
                 run: |
-                    ./gradlew check
+                    ./gradlew -i ktlintCheck
